Squash footer width bug

--- a/themes/trc/sass/_page-templates.scss
+++ b/themes/trc/sass/_page-templates.scss
@@ -188,6 +188,10 @@
     min-height: 60rem;
   }
 
+  .footer-box {
+    width: auto;
+  }
+
   .footer-top {
     flex-flow: column nowrap;
     justify-content: center;
